--- a/Notebooks/Notebook_T4.ipynb
+++ b/Notebooks/Notebook_T4.ipynb
@@ -7,6 +7,13 @@
     "# Módulo 2 - Agentes Inteligentes"
    ]
   },
+   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A01653448 -Axel Meinguer|| A01336319-Carlos Aguirre|| A01651206- Daniel Zubieta||A01336767- Alister Estrada"
+   ]
+  },
   {
    "cell_type": "markdown",
    "metadata": {},
