--- a/Notebooks/Notebook_T4.ipynb
+++ b/Notebooks/Notebook_T4.ipynb
@@ -7,11 +7,26 @@
     "# Módulo 2 - Agentes Inteligentes"
    ]
   },
-   {
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A01653448 -Axel Meinguer|| A01336319-Carlos Aguirre|| A01651206- Daniel Zubieta||A01336767- Alister Estrada"
+    "# Notebook - Módulo 2\n",
+    "\n",
+    "---\n",
+    "Daniel Zubieta Ambriz A01651206 https://github.com/Dazuam/SistemasInteligentes\n",
+    "\n",
+    "Carlos Aguirre Orozco A01336319 https://github.com/Lucer9/Sistemas-\n",
+    "\n",
+    "Axel Octavio Meinguer Estrada A01653448 https://github.com/alupusmc/SistemasInteligentes\n",
+    "\n",
+    "Alister Estrada Cueto A01336767 https://github.com/AlisterEstrada/SistemasInteligente\n",
+    "\n",
+    "### Bienvenidos a esta notebook con explicaciones más claras que el agua... \n",
+    "\n",
+    "---\n",
+    "\n",
+    "![alt text](https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcS-0p4mbBpdODWdMmOoLA72P-M-aOWK6iVrjg&usqp=CAU)"
    ]
   },
   {
