--- a/Notebooks/Notebook_T4.ipynb
+++ b/Notebooks/Notebook_T4.ipynb
@@ -20,8 +20,8 @@
     "\n",
     "Axel Octavio Meinguer Estrada A01653448 https://github.com/alupusmc/SistemasInteligentes\n",
     "\n",
-    "Alister Estrada Cueto A01336767 https://github.com/AlisterEstrada/SistemasInteligente\n",
-    "\n",]
+    "Alister Estrada Cueto A01336767 https://github.com/AlisterEstrada/SistemasInteligente\n"
+   ]
   },
   {
    "cell_type": "markdown",
